some fixes, animations for copy mail links and scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -40,14 +40,27 @@ h1{
 }
 
 :root {
-  --main-bg-color: rgb(255, 255, 255);
-  --main-text-color: rgb(0, 0, 0);
+  --main-bg-color: #fffaf1;
+  --main-text-color: #1c1c1c;
+  
+  --scrollbar-bg-color: #1b1b1b;
+  --scrollbar-thumb-color: #009999;
 }
 .dark {
-  --main-bg-color: rgb(0, 0, 0);
-  --main-text-color: rgb(255, 255, 255);
+  --main-bg-color: #1c1c1c;
+  --main-text-color: #fffaf1;
+}
+::-webkit-scrollbar {
+  width: 2px;
 }
 
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px var(--scrollbar-bg-color);
+}
+
+::-webkit-scrollbar-thumb {
+background-color: var(--scrollbar-thumb-color);
+}
 #root {
   background-color: var(--main-bg-color);
   color: var(--main-text-color);
@@ -176,16 +189,34 @@ h1{
     gap: 10px;
   }
   .hero__link a{
+    text-decoration: none;
+    color: var(--main-text-color);
+  }
+  .hero__link a::after{
     transition: all 0.2s ease-out;
     color: var(--main-text-color);
     font-size: 1.6rem;
     text-decoration: none;
     border-bottom: 1px solid var(--main-text-color);
     padding-bottom: 2px;
+    content: "Get in touch";
   }
-  .hero__link a:hover{
-    opacity: 0.7;
+  .hero__link a::after:hover{
     transform: translateX(10px);
+  }
+  .hero__link a:hover::after{
+    opacity: 1;
+    transform: translateX(10px);
+    display: inline-block;
+    content: attr(data-content);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.308);
+  }
+  .hero__link a:focus::after{
+    opacity: 1;
+    transform: translateX(10px);
+    display: inline-block;
+    content: attr(data-content);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.308);
   }
 
   .card{
@@ -197,6 +228,9 @@ h1{
   .card__img{
     width: 70%;
     object-fit: cover;
+    perspective: 1000px;
+    transform-style: preserve-3d;
+    transform: rotateY(0deg);
   }
   .card__container{
     display: flex;
